# libexchanger

./: CMakeLists.txt  LICENSE  README.adoc  README.md
docs/: Doxyfile.in  README.md
examples/: CMakeLists.txt  client.c  common.c  common.h  server.c
src/: CMakeLists.txt  spake2plus.c  spake2plus.h  spake2plus_test.h
test/: CMakeLists.txt  test_derive_conf_keys.c  test_derive_conf_keys.h  test_get_Ke.c  test_get_Ke.h  test_get_own_pA_or_pB.c  test_get_own_pA_or_pB.h  test_globals.h  test_init.c  test_init.h  test_init_pw.c  test_init_pw.h  test_load_L_w0.c  test_load_L_w0.h  test_main.c  test_server_client_exhausting.sh  test_setup_protocol.c  test_setup_protocol.h  test_vectors.c  test_vectors.h  test_verify.c  test_verify.h
